2014-03-07  Tobias Brox <t-caldav@tobixen.no>
	* setup.py - version bump (0.3-devel)

	* caldav/davclient.py - minor api difference; it feels more
	object-oriented to write principal = client.principal() than
	principal = Principal(client)

	* caldav/tests/test_caldav.py - work to reflect the above

	* docs/source/index.rst - work to reflect the above

	* docs/source/index.rst - added documentation that the tests may
	fail if several test runs are performed simultaneously

2014-03-07  Tobias Brox <t-caldav@tobixen.no>
	* caldav/davclient.py - support for unicode and utf8

	* caldav/lib/url.py - support for unicode and utf8

	* caldav/objects.py - minor doc enhancement

	* tests/test_caldav.py - load an event or a calendar by the URL

	* tests/test_caldav.py - test calendar.events()

	* tests/test_caldav.py - test utf8 and unicode

	* docs/source/index.rst - documentation on how to run the test
	suite towards private calendar servers

	* setup.py - version bump (0.2.1)

2014-03-01  Tobias Brox <t-caldav@tobixen.no>
	* caldav/lib/url.py (make): function for backward compatibility

	* tests/: more test code, including backward compatibility test

2014-02-16  Tobias Brox <t-caldav@tobixen.no>
	* caldav/lib/namespace.py: fixing issue
	https://bitbucket.org/cyrilrbt/caldav/issue/29/centos59-minifix

2013-12-12  Tobias Brox <t-caldav@tobixen.no>
	* caldav/objects.py (Calendar): compatibility hack for zimbra -
	gotcha!  Use Calendar display name in the Calendar URL instead of
	Calendar ID.

	* caldav/objects.py: internal change - _create method now returns
	nothing, but sets self.url and self.id instead.

2013-12-11  Tobias Brox <t-caldav@tobixen.no>
	* caldav/objects.py (DAVObject): convenience fix - made client a
	conditional parameter to __init__.  Defaults to parent.client if
	parent is given.

	* caldav/objects.py (Calendar): convenience fix - made methods
	Calendar.event_by_uid and Calendar.event_by_url.  Calendar.event